--- a/gradle.properties
+++ b/gradle.properties
@@ -56,5 +56,7 @@ jekyll_version=4.0
 # TODO: Remove once KT-37187 is fixed
 org.gradle.jvmargs=-Xmx3g
 
+# todo:KLUDGE: This is commented out, and the property is set conditionally in build.gradle, because IDEA doesn't work with it.
+#kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.mpp.enableCompatibilityMetadataVariant=true
 kotlin.mpp.stability.nowarn=true
